# wiretap-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  Cargo.toml  README.md  RELEASE.md  RELEASE_SUMMARY.md  cmake.toml
.cargo/: config.toml
.github/workflows/: release.yml
development_documentation/: porting_progress.md  specification.md
include/: wiretap_rs.h
src/: add.rs  api.rs  cli.rs  clipboard.rs  constants.rs  expose.rs  ffi.rs  lib.rs  logging.rs  main.rs  peer.rs  ping.rs  serve.rs  status.rs
src/transport/: api.rs  icmp.rs  mod.rs  packet.rs  smoltcp.rs  socks5.rs  tcp.rs  udp.rs  wireguard.rs
src/transport/userspace/: bind.rs  mod.rs  packet.rs  router.rs
tests/: add_client_api_tests.rs  add_client_tests.rs  add_io_tests.rs  add_server_api_tests.rs  add_tests.rs  api_http_server_tests.rs  api_tests.rs  cli_add_server_api_tests.rs  cli_parse_tests.rs  e2ee_end_to_end_tests.rs  e2ee_over_relay_tests.rs  expose_tests.rs  ffi_tests.rs  icmp_ping_tests.rs  icmpv6_tests.rs  peer_tests.rs  quiet_mode_tests.rs  serve_runtime_tests.rs  serve_tests.rs  server_config_tests.rs  smoltcp_config_tests.rs  smoltcp_expose_tests.rs  smoltcp_proxy_tests.rs  smoltcp_udp_tests.rs  status_tests.rs  transport_api_tests.rs  transport_data_path_tests.rs  transport_tests.rs  transport_userspace_tests.rs  udp_proxy_tests.rs  wireguard_session_tests.rs  wireguard_tunnel_tests.rs
